started the landing page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chemify</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chemify</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+  <div class="main">
+    <section id="topbar">
+      <h3 class="logo">Elemental</h3><h3 class="logo logox">X</h3>
+    </section>
+  </div>
 </body>
 </html>
