--- a/equipment.html
+++ b/equipment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "beaker.css">
+    <link rel = "stylesheet" href = "equipment.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,12 +13,12 @@
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">ERLENMEYER FLASK</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">TEST TUBE</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">VIAL WITH CAP</button></a>
-<a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">Glassware- used for measurement</button></a>
+    <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">Glassware- used for measurement</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">VOLUMETRIC FLASK</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">GRADUATED CYLINDER</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">PIPET</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">BURET</button></a>
-<a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">Equipment often used in Titrations</button></a>
+    <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">Equipment often used in Titrations</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">RING STAND</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">BURET CLAMP</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">UTILITY CLAMP</button></a>
