index.html edited

--- a/index.html
+++ b/index.html
@@ -9,8 +9,45 @@
 <body>
   <div class="main">
     <section id="topbar">
-      <h3 class="logo">Elemental</h3><h3 class="logo logox">X</h3>
+      <div style="display: flex;"><h3 class="logo">Elemental</h3><h3 class="logo logox">X</h3></div>
+      <div class="topbar-btn">
+        <button>Common Lab Equipments</button>
+        <button>Evolution Of Periodic Table</button>
+      </div>
     </section>
+    <div class="periodic-table-container">
+      <section class="periodic-table">
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div class="box" style="background-color: aqua;">andi</div>
+        <div class="box" style="background-color: aqua;">andi</div>
+        <div class="box" style="background-color: aqua;">andi</div>
+        <div class="box" style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div style="background-color: aqua;">andi</div>
+        <div>andi</div>
+        <div>andi</div>
+        <div>andi</div>
+        <div>andi</div>
+        <div>andi</div>
+        <div>andi</div> 
+        <div>andi</div>
+        <div>andi</div>
+      </section>
+    </div>
   </div>
 </body>
 </html>
