index.html edited

--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
     </section>
     <div class="periodic-table-container">
       <section class="periodic-table">
+        <div class="element element1">
+          <div class="element-atomic-details">
+            <div class="element-atomic-no">1</div>
+            <div class="element-atomic-mass">1.1</div>
+          </div>
+          <div class="element-atomic-symbol">H</div>
+          <div class="element-atomic-name">Hydrogen</div>
+        </div>
+        <div class="element element1">
+          <div class="element-atomic-details">
+            <div class="element-atomic-no">1</div>
+            <div class="element-atomic-mass">1.1</div>
+          </div>
+          <div class="element-atomic-symbol">H</div>
+          <div class="element-atomic-name">Hydrogen</div>
+        </div>
         <div style="background-color: aqua;">andi</div>
         <div style="background-color: aqua;">andi</div>
         <div class="box" style="background-color: aqua;">andi</div>
