made elements.txt

--- a/equipment.html
+++ b/equipment.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="equipment-main">
+        <section id="topbar">
+            <h3 class="logo">Elemental</h3>
+            <h3 class="logo logox">X</h3>
+        </section>
     <div class="TABLE-OF-CONTENTS">
         
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">BEAKER</button></a>
@@ -35,6 +40,7 @@
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">CENTRIFUGE</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">BUNSEN BURNER</button></a>
     <a href='https://chem.libretexts.org/Courses/Hope_College/General_Chemistry_Labs/Lab_Equipment#ERLENMEYER_FLASK' class="BEAKER">DESSICATOR</button></a>
+    </div>
     </div>
 </body>
 </html>
