--- a/evolution.html
+++ b/evolution.html
@@ -3,9 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="evolution.css">
   <title>Evolution of Periodic Table</title>
 </head>
 <body>
-  
+  <section id="topbar">
+    <div style="display: flex;"><h3 class="logo">Elemental</h3><h3 class="logo logox">X</h3></div>
+    <div class="topbar-btn">
+      <button>Common Lab Equipments</button>
+      <button>Evolution Of Periodic Table</button>
+    </div>
+  </section>
+
+  <div class="container">
+    <h2>Evolution</h2>
+    <div class="button-container">
+      <button class="scroll_button">
+        <svg class="image" xmlns="http://www.w3.org/2000/svg" width="20" height="50" style=""><g fill="none" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><path d="M10 7.875c-1.975 13.446 1.001 27.03-.5 40.5M3.236 11.107c3.721-2.325 4.349-6.603 7.402-9.481 1.046 3.027 3.442 9.07 6.125 11.113" class="teNVgDdo_0"></path></g></svg>
+    </button>
+    </div>
+  </div>
+  <div class="divider">
+    <svg class="div_image" xmlns="http://www.w3.org/2000/svg" width="20" height="50" style=""><g fill="none" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><path d="M10 7.875c-1.975 13.446 1.001 27.03-.5 40.5M3.236 11.107c3.721-2.325 4.349-6.603 7.402-9.481 1.046 3.027 3.442 9.07 6.125 11.113" class="teNVgDdo_0"></path></g></svg>
+  </div>
 </body>
 </html>
