--- a/equipment.html
+++ b/equipment.html
@@ -41,7 +41,7 @@
     <a href="">DESSICATOR</a>
     </div>
     <div class="img">
-        <img src="imgs/beaker.jpeg" alt="beaker" style="width:128px;height:128px;">
+        <img id="beaker_img" src="imgs/beaker.jpeg" alt="beaker">
     </div>
     <div class="all-contents">
         <a id="BEAKER">
@@ -51,7 +51,23 @@
             <ul>They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.</ul>
             <ul>They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such other apparatus come handy in this.</ul>
         </a>
-    </div>
+        <div class="img">
+            <img id="beaker_img" src="imgs/beaker.jpeg" alt="beaker">
+        </div>
+        
+        <div class="all-contents">
+            <a id="ERLENMEYER">
+                <ul>Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening
+                    having a rim around it along with a spout.</ul>
+                <ul>The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the
+                    top.</ul>
+                <ul>Most of the time watch glasses are used to cover their solutions.</ul>
+                <ul>They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.</ul>
+                <ul>They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such
+                    other apparatus come handy in this.</ul>
+            </a>
+        </div>
+
     </div>
 </body>
 </html>
