--- a/equipment.html
+++ b/equipment.html
@@ -56,7 +56,7 @@
         </div>
         
         <div class="all-contents">
-        <p id="notBEAKER">
+        <p id="BEAKER">
             Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a
             rim around it along with a spout.<br><br>
             The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the
