--- a/equipment.html
+++ b/equipment.html
@@ -40,34 +40,36 @@
     <a href="">BUNSEN BURNER</a>
     <a href="">DESSICATOR</a>
     </div>
-    <div class="img">
-        <img id="beaker_img" src="imgs/beaker.jpeg" alt="beaker">
-    </div>
+
     <div class="all-contents">
-        <p id="BEAKER">
-            Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a rim around it along with a spout.<br><br>
-            The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the top.<br><br>
-            Most of the time watch glasses are used to cover their solutions.<br><br>
-            They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.<br><br>
-            They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such other apparatus come handy in this.<br><br>
-        </p>
-        <div class="img">
-            <img id="beaker_img" src="imgs/beaker.jpeg" alt="beaker">
-        </div>
-        
-        <div class="all-contents">
-        <p id="BEAKER">
-            Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a
-            rim around it along with a spout.<br><br>
-            The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the
-            top.<br><br>
-            Most of the time watch glasses are used to cover their solutions.<br><br>
-            They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.<br><br>
-            They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such other
-            apparatus come handy in this.<br><br>
-        </p>
+        <div class="ABCD">
+            <div class="img">
+                <img id="beaker_img" src="imgs/beaker.jpeg" alt="beaker">
+            </div>
+            <p id="BEAKER">
+                Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a rim around it along with a spout.<br><br>
+                The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the top.<br><br>
+                Most of the time watch glasses are used to cover their solutions.<br><br>
+                They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.<br><br>
+                They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such other apparatus come handy in this.<br><br>
+            </p>
         </div>
 
+        <div class="ABCD">
+                <p id="BEAKER">
+                    Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a
+                    rim around it along with a spout.<br><br>
+                    The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the
+                    top.<br><br>
+                    Most of the time watch glasses are used to cover their solutions.<br><br>
+                    They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.<br><br>
+                    They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such other
+                    apparatus come handy in this.<br><br>
+                </p>
+                <div class="img">
+                    <img id="beaker_img" src="imgs/beaker.jpeg" alt="beaker">
+                </div>
+        </div>
     </div>
 </body>
 </html>
