--- a/equipment.html
+++ b/equipment.html
@@ -45,11 +45,11 @@
     <div class="all-contents">
         <div class="ABCD-1">
             <p id="BEAKER">
-                Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a rim around it along with a spout.<br><br>
-                The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the top.<br><br>
-                Most of the time watch glasses are used to cover their solutions.<br><br>
-                They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.<br><br>
-                They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such other apparatus come handy in this.<br><br>
+            Beakers are cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a rim around it along with a spout.<br><br>
+            The spout on their rim’s aids in the proper pouring of solutions and they do not have any covering on the top.<br><br>
+            Most of the time watch glasses are used to cover their solutions.<br><br>
+            They are of varying sizes and are used to hold, heat, or mix substances with a proper measure.<br><br>
+            They come with graduated calibrations, they are not meant for precise calculations of solutions, and as such other apparatus come handy in this.<br><br>
             </p>
             <div class="img">
                 <img id="beaker_img" src="imgs/beaker.jpeg" alt="beaker">
@@ -95,10 +95,12 @@
 
         <div class="ABCD-1">
             <p id="BEAKER">
-        
+                Used to measure and transfer small volumes of liquids accurately.<br><br>
+                A cylindrical glass or plastic tube that has a narrow end for transferring liquids, and a bulb or other mechanism for drawing up the liquid.<br><br>
+                
             </p>
             <div class="img">
-                <img id="beaker_img" src="imgs/ERLENMEYER_FLASK.jpeg" alt="beaker">
+                <img id="beaker_img" src="imgs/PIPET.jpeg" alt="beaker">
             </div>
         </div>
         <div class="ABCD">
