--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="element element116"><div class="element-atomic-details"><div class="element-atomic-no">116</div><div class="element-atomic-mass">292</div></div><div class="element-atomic-symbol">Uuh</div><div class="element-atomic-name">Livermorium</div></div>
         <div class="element element117"><div class="element-atomic-details"><div class="element-atomic-no">117</div><div class="element-atomic-mass">292</div></div><div class="element-atomic-symbol">Uuh</div><div class="element-atomic-name">Tsunebunium</div></div>
         <div class="element element118"><div class="element-atomic-details"><div class="element-atomic-no">118</div><div class="element-atomic-mass">294</div></div><div class="element-atomic-symbol">Uuo</div><div class="element-atomic-name">Oganesson</div></div>
-        <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+        <div></div><div></div><div></div><div></div>
         <div class="element element58"><div class="element-atomic-details"><div class="element-atomic-no">58</div><div class="element-atomic-mass">140.12</div></div><div class="element-atomic-symbol">Ce</div><div class="element-atomic-name">Cerium</div></div>
         <div class="element element59"><div class="element-atomic-details"><div class="element-atomic-no">59</div><div class="element-atomic-mass">140.91</div></div><div class="element-atomic-symbol">Pr</div><div class="element-atomic-name">Praseodymium</div></div>
         <div class="element element60"><div class="element-atomic-details"><div class="element-atomic-no">60</div><div class="element-atomic-mass">144.24</div></div><div class="element-atomic-symbol">Nd</div><div class="element-atomic-name">Neodymium</div></div>
