--- a/evolution.html
+++ b/evolution.html
@@ -31,16 +31,53 @@
     <div class="container left">
       <div class="content">
         <h2>1649</h2>
-        <img src="henn (2).jpg" style="border-radius: 50%;height: 20vh;width: 20vh;"></img>
-        <p>Hennig Brand discovered Phosphorus..</p>
+        <img src="henn (2).jpg" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
+        <p class = "first-timeline">Hennig Brand discovered Phosphorus..</p>
       </div>
-    </div>
+    </div>    
     <div class="container right">
       <div class="content">
         <h2>1829</h2>
-        <p>Johann Dobereiner discovered the halogen triad and the alkali metal triad.</p>
+        <img src="DPT_Dobereiner_3.jpg" style="border-radius: 50%;height: 20vh;width: 19vh;border: 4px solid #a8a3a3 ;"></img>
+        <p class = "second-timeline">Johann Dobereiner discovered the halogen triad and the alkali metal triad.</p>
       </div>
     </div>
+  
+  <div class="container left">
+    <div class="content">
+      <h2>1862</h2>
+      <img src="periodic-table.png" style="border-radius: 10%;height: 20vh;width: 24vh;border: 1px solid #4c4c4c;"></img>
+      <p class = "third-timeline">The first periodic table was created by A.E.Beguyer de Chancourtois. He assembled the table by transcribing a list of the elements positioned on a cylinder in terms of increasing atomic weight.</p>
+    </div>
+  </div> 
+  <div class="container right">
+    <div class="content">
+      <h2>1869</h2>
+      <img src="dimendeleevcab.webp" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
+      <p class = "fourth-timeline">Russian Dmitri Mendeleev published his periodic table, eventually becoming the “father of the periodic table.</p>
+    </div>
+  </div>    
+  <div class="container left">
+    <div class="content">
+      <h2>1911</h2>
+      <img src="Ernest-Rutherford-oil-painting-J-Dunn-National-1932.webp" style="border-radius: 50%;height: 20vh;width: 19vh;border: 4px solid #a8a3a3 ;"></img>
+      <p class = "fourth-timeline"> Ernest Rutherford published studies of the scattering of alpha particles by heavy atom nuclei which led to the determination of nuclear charge.</p>
+    </div>
+  </div>    
+  <div class="container right">
+    <div class="content">
+      <h2>1913</h2>
+      <img src="Moseley.jpg" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
+      <p class="fifth-timeline"> Henry Moseley discovered that the ordering of the wavelengths of the x-ray emissions of the elements coincided with the ordering of the elements by atomic number. This discovery established that “the properties of the elements varied periodically with atomic number,” not atomic weight, which had been previously accepted under periodic law.</p>
+    </div>
+  </div>    
+  <div class="container left">
+    <div class="content">
+      <h2>1940</h2>
+      <img src="Glenn-T-Seaborg-1968.webp" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
+      <p class="sixth-timeline">Glenn Seaborg discovered plutonium and the transuranic elements from 94 to 102. His findings represented the last (and most recent) changes to the periodic table.</p>
+    </div>
   </div>
+</div>       
 </body>
 </html>
