--- a/equipment.html
+++ b/equipment.html
@@ -135,11 +135,11 @@
             </div>
         </div>
         <div class="content content-left">
-            <p id="BEAKER">
+            <ul>
         
-            </p>
+            </ul>
             <div class="img">
-                <img id="beaker_img" src="imgs/ERLENMEYER_FLASK.jpeg" alt="beaker">
+                <img id="RING STAND" src="imgs/Ringstand.jpg" alt="beaker">
             </div>
         </div>
         <div class="content content-right">
