--- a/equipment.html
+++ b/equipment.html
@@ -137,10 +137,12 @@
         </div>
         <div class="content content-right">
             <ul>
-                <h3>BURETTE CLAMP</h3>                
+                <h3>BURETTE CLAMP</h3>
+                <li>Used for firmly holding test-tubes, burettes and other glassware in place when performing experiments such as titration.</li>
+
             </ul>
             <div class="img">
-                <img id="BURET CLAMP" src="imgs/Buret_clamp.jpeg" alt="beaker">
+                <img id="BURET CLAMP" src="imgs/Burette_Clamp.jpg" alt="beaker">
             </div>
         </div>
         <div class="content content-left">
