--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 <body>
   <div class="main">
     <section id="topbar">
-      <div style="display: flex;"><h3 class="logo">Elemental</h3><h3 class="logo logox">X</h3></div>
+      <div><h3 class="logo">Elemental<span>X</span></h3></div>
       <div class="topbar-btn">
-        <button>Common Lab Equipments</button>
-        <button>Evolution Of Periodic Table</button>
+        <a class="topbar-a topbar-a-1">Periodic Table</a>
+        <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
+        <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
       </div>
     </section>
+    <div class="elements-wiki">
+      <iframe src="https://en.wikipedia.org/wiki/helium" title="Hydrogen" id="wiki"></iframe>
+    </div>
     <div class="periodic-table-container">
-      <section class="periodic-table">
+      <section class="periodic-table" id="periodic-table">
         <div class="element element1"><div class="element-atomic-details"><div class="element-atomic-no">1</div><div class="element-atomic-mass">1.01</div></div><div class="element-atomic-symbol">H</div><div class="element-atomic-name">Hydrogen</div></div>
         <div class="element element2"><div class="element-atomic-details"><div class="element-atomic-no">2</div><div class="element-atomic-mass">4.0</div></div><div class="element-atomic-symbol">He</div><div class="element-atomic-name">Helium</div></div>
         <div class="element element3"><div class="element-atomic-details"><div class="element-atomic-no">3</div><div class="element-atomic-mass">6.94</div></div><div class="element-atomic-symbol">Li</div><div class="element-atomic-name">Lithium</div></div>
