--- a/equipment.html
+++ b/equipment.html
@@ -8,19 +8,20 @@
 </head>
 <body>
     <section id="topbar">
-        <div style="display: flex;"><h3 class="logo">Elemental</h3><h3 class="logo logox">X</h3></div>
+        <div><h3 class="logo">Elemental<span>X</span></h3></div>
         <div class="topbar-btn">
-          <button>Common Lab Equipments</button>
-          <button>Evolution Of Periodic Table</button>
+          <a class="topbar-a topbar-a-1">Periodic Table</a>
+          <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
+          <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
         </div>
-    </section>
+      </section>
     <div class="equipment-main">
         <div class="TABLE-OF-CONTENTS">
             <h3>Table of Contents</h3>
             <ul>
-                <li><a href="#BEAKER">Beaker</a></li>
-                <li><a href="#ERLENMEYER_FLASK">Erlenmeyer Flask</a></li>
-                <li><a href="#TEST TUBE">Test Tube</a></li>
+                <li><a href="#Timepass">Beaker</a></li>
+                <li><a href="#BEAKER">Erlenmeyer Flask</a></li>
+                <li><a href="#ERLENMEYER_FLASK">Test Tube</a></li>
             </ul>
             <h5>Glassware used for measurement</h5>
             <ul>
@@ -43,7 +44,7 @@
         </div>
 
     <div class="all-contents">
-        <div class="Timepass"></div>
+        <div id="Timepass"></div>
         <div class="content content-left">
             <ul>
                 <h3>BEAKER</h3>
