Changed the layout for facts. AGAINN!!!

--- a/fax.html
+++ b/fax.html
@@ -17,16 +17,25 @@
           </section>
           <!-- Top bar done -->
           <div id="setup">
-                <div class="ele ele1">1</div>
-                <div class="ele ele2">2</div> 
-                <div class="ele ele3">3</div>
-                <div class="ele ele4">4</div>
-                <div class="ele ele5">5</div>
-                <div class="ele ele5">5</div>
-                <div class="ele ele5">5</div>
-                <div class="ele ele5">5</div>
-                <div class="ele ele5">5</div>
-                <div class="ele ele5">5</div>
+            <div id="left">Blah Blah Blah Blah Blah Blah Blah Blah BlahBlah Blah BlahBlah Blah Blah</div>
+              <div id="mid">
+                <div class="ele "><img src="Avodrip.jpeg" width="300px"></div>
+                <div class="ele "><img src="kitty.jpeg" width="300px" ></div> 
+                <div class="ele ">3</div>
+                <div class="ele ">4</div>
+                <div class="ele ">5</div>
+                <div class="ele ">5</div>
+                <div class="ele ">5</div>
+                <div class="ele ">5</div>
+                <div class="ele ">5</div>
+                <div class="ele ">5</div>
+              </div>
+              <div id="right">
+                <a href="https://www.reddit.com/r/chemistry/ " target="_blank"><img src="redi.png" ></a>r/chemistry<br><br>
+                <a href="https://www.reddit.com/r/chemistrymemes/ " target="_blank"><img src="redi.png" ></a>r/chemistrymemes<br><br>
+
+              </div>
+
           </div>
 
     </div>
