--- a/equipment.html
+++ b/equipment.html
@@ -10,14 +10,15 @@
     <section id="topbar">
         <div><h3 class="logo">Elemental<span>X</span></h3></div>
         <div class="topbar-btn">
-          <a class="topbar-a topbar-a-1">Periodic Table</a>
+          <a class="topbar-a topbar-a-1" href="index.html">Periodic Table</a>
           <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
           <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
+          <a class="topbar-a topbar-a-4" href="fax.html">Facts n Memes</a>
         </div>
       </section>
     <div class="equipment-main">
         <div class="TABLE-OF-CONTENTS">
-            <h3>Table of Contents</h3>
+            <h3>Table of Contents</h3> 
             <ul>
                 <li><a href="#Timepass">Beaker</a></li>
                 <li><a href="#BEAKER">Erlenmeyer Flask</a></li>
