--- a/fax.html
+++ b/fax.html
@@ -8,20 +8,21 @@
 </head>
 <body >
     <div class="fax-main">
-        <section id="topbar">
-            <div style="display: flex;"><h3 class="logo">Elemental</h3><h3 class="logo logox">X</h3></div>
-            <div class="topbar-btn">
-              <button>Common Lab Equipments</button>
-              <button>Evolution Of Periodic Table</button>
-            </div>
-          </section>
+      <section id="topbar">
+        <div><h3 class="logo">Elemental<span>X</span></h3></div>
+        <div class="topbar-btn">
+          <a class="topbar-a topbar-a-1">Periodic Table</a>
+          <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
+          <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
+        </div>
+      </section>
           <!-- Top bar done -->
-          <div id="setup">
-            <div id="left">Blah Blah Blah Blah Blah Blah Blah Blah BlahBlah Blah BlahBlah Blah Blah</div>
+          <div id="main">
+            <div id="left">Blah Blah Blah Blah Blah </div>
               <div id="mid">
                 <div class="ele "><img src="Avodrip.jpeg" width="300px"></div>
                 <div class="ele "><img src="kitty.jpeg" width="300px" ></div> 
-                <div class="ele ">3</div>
+                <div class="ele "><img src="meme1.webp" width="300px" ></div>
                 <div class="ele ">4</div>
                 <div class="ele ">5</div>
                 <div class="ele ">5</div>
