--- a/fax.html
+++ b/fax.html
@@ -11,14 +11,15 @@
       <section id="topbar">
         <div><h3 class="logo">Elemental<span>X</span></h3></div>
         <div class="topbar-btn">
-          <a class="topbar-a topbar-a-1">Periodic Table</a>
+          <a class="topbar-a topbar-a-1" href="index.html">Periodic Table</a>
           <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
           <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
+          <a class="topbar-a topbar-a-4" href="fax.html">Facts n memes</a>
         </div>
       </section>
           <!-- Top bar done -->
           <div id="main">
-            <div id="left">Blah Blah Blah Blah Blah </div>
+            <div id="left">Blah Blah Blah Blah Blah blah blah</div>
               <div id="mid">
                 <div class="ele "><img src="Avodrip.jpeg" width="300px"></div>
                 <div class="ele "><img src="kitty.jpeg" width="300px" ></div> 
