--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
   <section id="topbar">
     <div><h3 class="logo">Elemental<span>X</span></h3></div>
     <div class="topbar-btn">
-      <a class="topbar-a topbar-a-1">Periodic Table</a>
+      <a class="topbar-a topbar-a-1" href="index.html">Periodic Table</a>
       <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
       <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
       <a class="topbar-a topbar-a-4" href="fax.html">Facts n Memes</a>
@@ -20,9 +20,15 @@
     <section class="landing-1">
       <div class="landing-1-text">
         <h1><span><s>Hate</s></span> Love chemistry</h1>
-        <p>Buy premiuim for rs 999 for unlimited access</p>
+        <p>We strive to make chemistry fun and interesting</p>
       </div>
-      <img src="woman-gb287c0beb_1280.png">
+      <img src="people.svg">
+    </section>
+    <section class="landing-2">
+      <div class="landing-2-content">
+        <h2>Check Out our interactive periodic table</h2>
+        <button>Check it Out</button>
+      </div>
     </section>
   </div>
 </body>
