Chepp oru mandan aan

--- a/fax.html
+++ b/fax.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
+
+  <!-- Other meta tags and stylesheets -->
+
+
 <html lang="en">
 <head>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+      <!-- Adding the font awesome for the icons that are uses in the action bar  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,9 +27,14 @@
       </section>
           <!-- Top bar done -->
           <div id="main">
-            <div id="left">Blah Blah Blah Blah Blah blah blah</div>
+            <div id="left">
+              <div class="fact">Water expands on freezing. The volume of 1 ice cube is 9% more than the liquid used to form it</div>
+              <div class="fact">Mercury and bromine are the only two elements that change from a solid to a liquid at room temperature. However, if you hold a lump of gallium in your hands, it will melt with their warmth</div>
+              <div class="fact">If you take a cup of water and put a few tablespoons of salt in it. The level of water goes down instead of rising and overflowing.</div>
+              <div class="fact"> Human body contains about 200 g or 0.4 lb of NaCl or salt.</div>
+            </div>
               <div id="mid">
-                <div class="ele "><img src="Avodrip.jpeg" width="300px"></div>
+                <div class="ele "><img src="Avodrip.jpeg" width="300px"><div class="action-bar"><button><i class="far fa-heart like-icon"></i></button><button><i class="fas fa-share"></i></button><button><i class="fas fa-download"></i></button></div></div>
                 <div class="ele "><img src="kitty.jpeg" width="300px" ></div> 
                 <div class="ele "><img src="meme1.webp" width="300px" ></div>
                 <div class="ele ">4</div>
@@ -43,3 +56,5 @@
     </div>
 </body>
 </html>
+
+
