--- a/landing.html
+++ b/landing.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <section id="topbar">
-    <div><h3 class="logo">Elemental<span>X</span></h3></div>
+    <div><h3 class="logo"><a href="landing.html">Elemental<span>X</span></a></h3></div>
     <div class="topbar-btn">
       <a class="topbar-a topbar-a-1" href="index.html">Periodic Table</a>
       <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
