Chepp oru mandan aan

--- a/fax.html
+++ b/fax.html
@@ -35,8 +35,8 @@
             </div>
               <div id="mid">
                 <div class="ele "><img src="Avodrip.jpeg" width="300px"><div class="action-bar"><button><i class="far fa-heart like-icon"></i></button><button><i class="fas fa-share"></i></button><button><i class="fas fa-download"></i></button></div></div>
-                <div class="ele "><img src="kitty.jpeg" width="300px" ></div> 
-                <div class="ele "><img src="meme1.webp" width="300px" ></div>
+                <div class="ele "><img src="kitty.jpeg" width="300px" ><div class="action-bar"><button><i class="far fa-heart like-icon"></i></button><button><i class="fas fa-share"></i></button><button><i class="fas fa-download"></i></button></div></div> 
+                <div class="ele "><img src="meme1.webp" width="300px" ><div class="action-bar"><button><i class="far fa-heart like-icon"></i></button><button><i class="fas fa-share"></i></button><button><i class="fas fa-download"></i></button></div></div>
                 <div class="ele ">4</div>
                 <div class="ele ">5</div>
                 <div class="ele ">5</div>
