--- a/equipment.html
+++ b/equipment.html
@@ -151,6 +151,10 @@
             <ul>
                 <h3>UTILITY CLAMP</h3>
                 <li>Used to hold other glassware onto a ring stand</li>
+                <li>Holding objects in place during gluing, soldering, or welding tasks.</li>
+                <li>Attaching backgrounds or accessories in photography and video shooting.</li>
+                <li>Keeping fabrics taut while sewing or quilting.</li>
+                <li>Assembling small parts or components during DIY projects.</li>
         
             </ul>
             <div class="img">
