--- a/equipment.html
+++ b/equipment.html
@@ -141,7 +141,10 @@
             <ul>
                 <h3>BURETTE CLAMP</h3>
                 <li>Used for firmly holding test-tubes, burettes and other glassware in place when performing experiments such as titration.</li>
-
+                <li>For precise positioning of the buret, ensuring accurate and controlled dispensing of liquids.</li>
+                <li>The clamp holds the buret in a vertical orientation, which is essential for accurate measurement and uniform flow of the liquid.</li>
+                <li>Particularly essential in titration experiments, where precise measurement and controlled liquid flow are critical.</li>
+                <li>The use of buret clamps helps ensure that experiments can be repeated accurately, maintaining consistency in results.</li>
             </ul>
             <div class="img">
                 <img id="BURET CLAMP" src="imgs/Burette_Clamp.jpg" alt="beaker">
