--- a/equipment.html
+++ b/equipment.html
@@ -132,6 +132,8 @@
                 <h3>RING STAND</h3>
                 <li>Ring stands are used to hold glassware in place during an experimental procedure.</li>
                 <li>You can attach ring clamps, versatile clamps, or 3-prong clamps (the latter require clamp holders).</li>
+                <li>The ring stand can hold a wire gauze or ceramic center that supports containers over a Bunsen burner or other heat sources.</li>
+                <li>Allows for the flexible arrangement of different equipment, such as burettes, flasks, beakers, and test tubes, at various heights and positions.</li>
             </ul>
             <div class="img">
                 <img id="RING STAND" src="imgs/Ringstand.jpg" alt="beaker">
